# Hermes-Capacities

./: .gitignore  README.md  install.sh  pyproject.toml  refresh_oauth.py  server.py  setup_oauth.py
examples/: daily-note-cron.md
